TableView2: Check cell visibility before add/remove listener (#1362)